fixed price multiple functionality done and updating graphql api version

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -121,3 +121,7 @@
 .tox-statusbar__branding {
   display: none !important;
 }
+
+.Polaris-Box:has(.fixed-cart-height) {
+  height: 100% !important;
+}
