update extension name and handle

--- a/extensions/theme-extension/blocks/package-protection.liquid
+++ b/extensions/theme-extension/blocks/package-protection.liquid
@@ -8,7 +8,7 @@
 {% endif %}
 {% schema %}
 {
-  "name": "Inhouse Shipping Protection",
+  "name": "Shipping Protection",
   "target": "body"
 }
 {% endschema %}
