added geolocation add trying to refactor to Graphql

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -155,4 +155,20 @@
     bottom: calc(3% + 60px);
   }
 }
-
+/* logo animation */
+.logo-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.logo-image img{
+  animation: Logo-animation 2s linear infinite;
+}
+@keyframes Logo-animation {
+  0%{
+    transform: scale(1);
+  }50%{
+     transform: scale(1.2);
+   }
+}
