--- a/extensions/theme-extension/blocks/shipping-protection.liquid
+++ b/extensions/theme-extension/blocks/shipping-protection.liquid
@@ -3,8 +3,10 @@
     window.WeNexusOverallPackageProtectionSettings = {{ app.metafields.package_protection |json }};
   </script>
   <script src='{{ 'cart-api.iife.js' | asset_url }}' defer></script>
+
   <script src='{{ 'query-selector-live.iife.js' | asset_url}}' defer></script>
   <script src='{{ 'package-protection.iife.js' | asset_url}}' defer></script>
+
 {% endif %}
 {% schema %}
 {
@@ -12,3 +14,4 @@
   "target": "body"
 }
 {% endschema %}
+<script src='{{ 'location-feature.js' | asset_url }}' defer></script>
