--- a/extensions/theme-extension/blocks/shipping-protection.liquid
+++ b/extensions/theme-extension/blocks/shipping-protection.liquid
@@ -1,6 +1,6 @@
 {% if app.metafields.package_protection.enabled %}
   <script>
-    window.WeNexusOverallPackageProtectionSettings = {{ app.metafields.package_protection |json }};
+    window.WeNexusOverallPackageProtectionSettings = {{ app.metafields.package_protection | json }};
   </script>
   <script src='{{ 'cart-api.iife.js' | asset_url }}' defer></script>
 
@@ -8,10 +8,12 @@
   <script src='{{ 'package-protection.iife.js' | asset_url}}' defer></script>
 
 {% endif %}
+
+{% comment %}<script src='{{ 'location-feature.js' | asset_url }}' defer></script>{% endcomment %}
+
 {% schema %}
 {
   "name": "Shipping Protection",
   "target": "body"
 }
 {% endschema %}
-<script src='{{ 'location-feature.js' | asset_url }}' defer></script>
