--- a/extensions/theme-extension/blocks/package-protection-claim.liquid
+++ b/extensions/theme-extension/blocks/package-protection-claim.liquid
@@ -4,10 +4,10 @@
 <body>
   <div id='claim-liquid'></div>
 </body>
-<script>
-  window.wenexus_shop_domain = '{{ shop.permanent_domain }}';
-  console.log(window.wenexus_shop_domain);
-</script>
+{% comment %}<script>{% endcomment %}
+  {% comment %}window.wenexus_shop_domain = '{{ shop.permanent_domain }}';{% endcomment %}
+  {% comment %}console.log(window.wenexus_shop_domain);{% endcomment %}
+{% comment %}</script>{% endcomment %}
 
 <script src='{{ 'package-protection-claim.js' | asset_url }}' defer></script>
 
