retrying to fix

--- a/extensions/theme-extension/blocks/package-protection-claim.liquid
+++ b/extensions/theme-extension/blocks/package-protection-claim.liquid
@@ -7,7 +7,7 @@
 
 <script>
   window.wenexus_shop_domain = '{{ shop.permanent_domain }}';
-  console.log(window.wenexus_shop_domain);
+  console.log('app-domain',window.wenexus_shop_domain);
 </script>
 
 
